--- a/Project_Management_server/vercel.json
+++ b/Project_Management_server/vercel.json
@@ -1,14 +1,14 @@
 {
   "builds": [
     {
-      "src": "./index.js",
-      "use": "@vercel/node"
+      "src": "./src/index.js",
+      "use": "@now/node"
     }
   ],
   "routes": [
     {
-      "src": "/.*",
-      "dest": "app.js"
+      "src": "/(.*)",
+      "dest": "index.js"
     }
   ]
 }
